...
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:indeterminateTint="#000204"
                            android:visibility="gone" />

                        <ImageButton
                            android:id="@+id/cancel_button"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/ic_baseline_delete_24"
                            android:scaleType="centerCrop"
                            android:layout_marginTop="10dp"
                            android:background="@android:color/transparent" />
...
