<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="2dp">

    <ImageView
        android:id="@+id/dimage"
        android:layout_width="334dp"
        android:layout_height="200dp"
        android:src="@drawable/pokhara" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="@color/black"
        android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>

        <TextView
        android:id="@+id/tvPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Price"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tvBook"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Book"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="#ED1A0A"/>


</LinearLayout>